--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/",
+    "start": "node src/index.js",
     "dev": "nodemon ."
   },
   "dependencies": {
