--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node .",
     "dev": "nodemon ."
   },
   "dependencies": {
